@@ -3,4 +3,8 @@
 
 #define VERSION 0.8
 
-#undef PACKAGE kdelibs
+#define PACKAGE kdelibs
+
+#define HAVE_GIFLIB 1
+
+#define HAVE_JPEGLIB 1
